--- a/Habrok/forms/mainwindow.ui
+++ b/Habrok/forms/mainwindow.ui
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>1150</x>
-      <y>60</y>
+      <y>120</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -47,17 +47,20 @@
     <property name="geometry">
      <rect>
       <x>1250</x>
-      <y>60</y>
+      <y>120</y>
       <width>80</width>
       <height>30</height>
      </rect>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="camera_id_message">
     <property name="geometry">
      <rect>
       <x>1160</x>
-      <y>100</y>
+      <y>160</y>
       <width>171</width>
       <height>30</height>
      </rect>
@@ -73,10 +76,13 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>230</y>
+      <y>320</y>
       <width>331</width>
       <height>29</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -86,7 +92,7 @@
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>200</y>
+      <y>290</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -102,7 +108,7 @@
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>260</y>
+      <y>350</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -118,10 +124,13 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>290</y>
+      <y>380</y>
       <width>331</width>
       <height>29</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -131,7 +140,7 @@
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>320</y>
+      <y>410</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -147,10 +156,13 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>350</y>
+      <y>440</y>
       <width>331</width>
       <height>29</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -160,7 +172,7 @@
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>380</y>
+      <y>470</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -176,10 +188,13 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>410</y>
+      <y>500</y>
       <width>331</width>
       <height>29</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -189,7 +204,7 @@
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>440</y>
+      <y>530</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -205,10 +220,13 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>470</y>
+      <y>560</y>
       <width>331</width>
       <height>29</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -218,7 +236,7 @@
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>500</y>
+      <y>590</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -234,10 +252,13 @@
     <property name="geometry">
      <rect>
       <x>1090</x>
-      <y>530</y>
+      <y>620</y>
       <width>331</width>
       <height>29</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -247,13 +268,135 @@
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>140</y>
+      <y>210</y>
       <width>99</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
      <string>Color</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="minimum_object_area_input">
+    <property name="geometry">
+     <rect>
+      <x>1290</x>
+      <y>700</y>
+      <width>101</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="minimum_object_area_label">
+    <property name="geometry">
+     <rect>
+      <x>1120</x>
+      <y>700</y>
+      <width>161</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Minmum Object Area:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox">
+    <property name="geometry">
+     <rect>
+      <x>1140</x>
+      <y>780</y>
+      <width>211</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Use Morphing Operations</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="dilate_rect_size_input">
+    <property name="geometry">
+     <rect>
+      <x>1290</x>
+      <y>860</y>
+      <width>71</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="dilate_rect_size_label">
+    <property name="geometry">
+     <rect>
+      <x>1120</x>
+      <y>860</y>
+      <width>161</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Dilate Rectangle Size</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="erode_rect_size_input">
+    <property name="geometry">
+     <rect>
+      <x>1290</x>
+      <y>820</y>
+      <width>71</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="erode_rect_size_label">
+    <property name="geometry">
+     <rect>
+      <x>1120</x>
+      <y>820</y>
+      <width>161</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Erode Rectangle Size</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="image_type_menu">
+    <property name="geometry">
+     <rect>
+      <x>1200</x>
+      <y>40</y>
+      <width>99</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Image Type</string>
     </property>
    </widget>
   </widget>
