--- a/SMMCGUI/forms/mainwindow.ui
+++ b/SMMCGUI/forms/mainwindow.ui
@@ -238,7 +238,7 @@
       <property name="geometry">
        <rect>
         <x>1140</x>
-        <y>140</y>
+        <y>80</y>
         <width>240</width>
         <height>30</height>
        </rect>
@@ -251,7 +251,7 @@
       <property name="geometry">
        <rect>
         <x>1140</x>
-        <y>200</y>
+        <y>140</y>
         <width>240</width>
         <height>30</height>
        </rect>
@@ -264,7 +264,7 @@
       <property name="geometry">
        <rect>
         <x>1140</x>
-        <y>260</y>
+        <y>200</y>
         <width>240</width>
         <height>30</height>
        </rect>
@@ -277,7 +277,7 @@
       <property name="geometry">
        <rect>
         <x>1140</x>
-        <y>320</y>
+        <y>260</y>
         <width>240</width>
         <height>30</height>
        </rect>
@@ -290,7 +290,7 @@
       <property name="geometry">
        <rect>
         <x>1160</x>
-        <y>460</y>
+        <y>350</y>
         <width>200</width>
         <height>30</height>
        </rect>
@@ -303,7 +303,7 @@
       <property name="geometry">
        <rect>
         <x>1160</x>
-        <y>420</y>
+        <y>320</y>
         <width>200</width>
         <height>30</height>
        </rect>
@@ -316,7 +316,7 @@
       <property name="geometry">
        <rect>
         <x>1200</x>
-        <y>640</y>
+        <y>720</y>
         <width>100</width>
         <height>60</height>
        </rect>
@@ -329,7 +329,85 @@
       <property name="geometry">
        <rect>
         <x>1260</x>
-        <y>500</y>
+        <y>390</y>
+        <width>100</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Send</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>1160</x>
+        <y>450</y>
+        <width>200</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>AI Manual Commands:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="manual_command_menu">
+      <property name="geometry">
+       <rect>
+        <x>1160</x>
+        <y>490</y>
+        <width>200</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Available Commands</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="send_manual_command">
+      <property name="geometry">
+       <rect>
+        <x>1260</x>
+        <y>530</y>
+        <width>100</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Send</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>1160</x>
+        <y>570</y>
+        <width>231</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Player to be manually controlled:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="players_menu">
+      <property name="geometry">
+       <rect>
+        <x>1160</x>
+        <y>600</y>
+        <width>200</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Available Players</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="send_manual_player">
+      <property name="geometry">
+       <rect>
+        <x>1260</x>
+        <y>640</y>
         <width>100</width>
         <height>30</height>
        </rect>
